--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -1,9 +1,26 @@
 {
     "compilerOptions": {
         "baseUrl": "src",
-        "module": "commonjs",
-        "target": "es6"
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+          ],
+        // "module": "commonjs",
+        "target": "es6",
+        "jsx": "react-jsx",
+        "allowJs": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "noFallthroughCasesInSwitch": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
   },
   "exclude": ["node_modules"]
-    
 }
