--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sketchbox-pages",
   "homepage": "https://awon20.github.io/sketchbox-pages",
   "version": "0.1.0",
-  "private":"false",
-  "__comment__":"private: true",
+  "private": "false",
+  "__comment__": "private: true",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -12,9 +12,10 @@
     "@testing-library/react": "^12.1.1",
     "@testing-library/user-event": "^13.2.1",
     "clsx": "^1.1.1",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
+    "react-color-palette": "^6.1.0",
     "react-component-whiteboard": "^1.1.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^16.14.0",
     "react-icons": "^4.2.0",
     "react-inlinesvg": "^2.3.0",
     "react-media-recorder": "^1.5.0",
@@ -24,6 +25,8 @@
     "react-scripts": "4.0.3",
     "react-sketch": "^0.5.1",
     "react-sketch-canvas": "^5.3.4",
+    "reactcss": "^1.2.3",
+    "roughjs": "^4.4.1",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
     "web-vitals": "^2.1.0"
