--- a/package.json
+++ b/package.json
@@ -9,27 +9,30 @@
     "@material-ui/icons": "^4.11.2",
     "@material/circular-progress": "^13.0.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.1",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
-    "react": "^16.14.0",
+    "iotcomms-react-webrtc": "^1.0.9",
+    "node-sass": "^4.14.1",
+    "react": "^16.6.3",
     "react-color-palette": "^6.1.0",
     "react-component-whiteboard": "^1.1.1",
-    "react-dom": "^16.14.0",
-    "react-icons": "^4.2.0",
+    "react-dom": "^16.6.3",
+    "react-icons": "^4.3.1",
     "react-inlinesvg": "^2.3.0",
-    "react-media-recorder": "^1.5.0",
+    "react-media-recorder": "^1.6.1",
     "react-pen-draw": "^1.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-sketch": "^0.5.1",
-    "react-sketch-canvas": "^5.3.4",
     "reactcss": "^1.2.3",
     "roughjs": "^4.4.1",
-    "socket.io": "^4.2.0",
-    "socket.io-client": "^4.2.0",
-    "web-vitals": "^2.1.0"
+    "socket.io": "^4.3.1",
+    "socket.io-client": "^4.3.2",
+    "styled-components": "^5.0.0",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,11 +59,9 @@
     ]
   },
   "devDependencies": {
-    "@iconify-icons/mdi": "^1.1.31",
+    "@iconify-icons/mdi": "^1.1.37",
     "@iconify/react": "^3.0.1",
-    "framer-motion": "^4.1.17",
     "gh-pages": "^3.2.3",
-    "react-loading": "^2.0.3",
-    "styled-components": "^5.3.1"
+    "react-loading": "^2.0.3"
   }
 }
