--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "iotcomms-react-webrtc": "^1.0.9",
     "node-sass": "^4.14.1",
     "react": "^16.6.3",
+    "react-canvas-draw": "^1.2.1",
     "react-color-palette": "^6.1.0",
     "react-component-whiteboard": "^1.1.1",
     "react-dom": "^16.6.3",
@@ -27,6 +28,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-sketch": "^0.5.1",
+    "react-video-recorder": "^3.19.1",
     "reactcss": "^1.2.3",
     "roughjs": "^4.4.1",
     "socket.io": "^4.3.1",
