--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "firebase": "^8.10.0",
+    "firebase-tools": "^8.10.0",
     "iotcomms-react-webrtc": "^1.0.9",
+    "material-ui-color-picker": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.6.3",
     "react-canvas-draw": "^1.2.1",
@@ -30,6 +33,8 @@
     "react-sketch": "^0.5.1",
     "react-video-recorder": "^3.19.1",
     "reactcss": "^1.2.3",
+    "recordrtc": "^5.6.2",
+    "redux-form": "^8.3.8",
     "roughjs": "^4.4.1",
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2",
