update the package!

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.10.0",
     "firebase-tools": "^8.10.0",
     "iotcomms-react-webrtc": "^1.0.9",
+    "json-bigint": "^1.0.0",
     "material-ui-color-picker": "^3.5.1",
     "react": "^16.6.3",
     "react-canvas-draw": "^1.2.1",
