--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2",
     "styled-components": "^5.0.0",
+    "use-image": "^1.0.8",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
